2007-08-30  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/Editors/_EditPrimary.py : refractoring
	* src/Editors/_EditPerson.py  :  refractoring
	* src/Editors/_EditFamily.py  : family quick reports
	* src/DataViews/_FamilyList.py: family quick reports
	* src/PageView.py             : family quick reports
	* src/plugins/all_events.py   : a new quick report, family events
	* src/Simple/_SimpleAccess.py : add access to get_first_name
	* src/glade/gramps.glade      : eventbox on familyeditor

2007-08-30  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_WriteGedcom.py (GedcomWriter.__write_person_name): fix
	handling of patronymic names

2007-08-30  Don Allingham  <don@gramps-project.org>
	* src/RelLib/_MediaObject.py (MediaObject.unserialize): fix init of
	self.marker

2007-08-30  Stephane Charette  <stephanecharette@gmail.com>
	* src/FilterEditor/_EditRule.py: new reference count filters
	* src/Filters/Rules/Repository/__init__.py: new reference count filters
	* src/Filters/Rules/Repository/Makefile.am: new reference count filters
	* src/Filters/Rules/Repository/_HasReferenceCountOf.py: new reference
	count filters
	* src/Filters/Rules/Event/__init__.py: new reference count filters
	* src/Filters/Rules/Event/Makefile.am: new reference count filters
	* src/Filters/Rules/Event/_HasReferenceCountOf.py: new reference count
	filters
	* src/Filters/Rules/Family/__init__.py: new reference count filters
	* src/Filters/Rules/Family/Makefile.am: new reference count filters
	* src/Filters/Rules/Family/_HasReferenceCountOf.py: new reference count
	filters
	* src/Filters/Rules/Place/__init__.py: new reference count filters
	* src/Filters/Rules/Place/Makefile.am: new reference count filters
	* src/Filters/Rules/Place/_HasReferenceCountOf.py: new reference count
	filters
	* src/Filters/Rules/Makefile.am: new reference count filters
	* src/Filters/Rules/_HasReferenceCountBase.py: new reference count
	filters